--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1> Why i want to become a developer?</h1>
+	<p>I want to become a developer because I enjoy solving problems and creating solutions that make life easier. Coding allows me to take an idea, break it down logically, and build something useful from it.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
