--- a/main.html
+++ b/main.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Personal Web Page</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<h1> Why i want to become a developer?</h1>
-	<p>I want to become a developer because I enjoy solving problems and creating solutions that make life easier. Coding allows me to take an idea, break it down logically, and build something useful from it.</p>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <h1>Why I want to become a developer?</h1>
+  <p>
+    I want to become a software developer because I enjoy solving problems and building solutions that can help people in their daily lives. 
+    Technology inspires me as it has the power to connect the world, create opportunities, and make tasks easier. 
+    I am motivated to continuously learn and improve my skills so that I can contribute to meaningful projects, 
+    innovate with new ideas, and build a rewarding career in the software industry.
+  </p>
 </body>
-
 </html>
